# rlm-code

./: .gitignore  .mcp.json  pyproject.toml
src/rlm_code/: __init__.py  cli.py  discover.py  extract.py  freshness.py  graph.py  indexer.py  models.py  parse.py  resolve.py  server.py  store.py  summarize.py  viz_server.py
src/rlm_code/web/: index.html
src/rlm_code/web/css/: style.css
src/rlm_code/web/js/: api.js  app.js  code.js  details.js  graph.js  search.js  tree.js
